Update: Clipping fix

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -76,7 +76,6 @@ body {
   box-shadow: rgba(0, 0, 0, 0.1) 0 1.875rem 1.875rem -0.625rem;
   position: relative;
   margin-top: 6.5625rem;
-  overflow: hidden;
 }
 
 @media screen and (min-width: 62.5rem) {
